rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ClassReferences/ShouldFail/syntax10/Test.java
// .result=COMPILE_FAIL
import java.util.ArrayList;
import java.io.*;


public class Test {
	
	interface A {
		B<Integer> m(Long s);
	}
	
	class B<T extends Number> {
		public B(T t)  {
			
		}
	}
	
	public void testMethod() {
		A a = B::new;
	}

}